Add Distro app scaffolding and shared file picker

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -178,6 +178,7 @@
         </div>
     </div>
 
+    <script type="module" src="/static/js/file_picker.js"></script>
     <script type="module">
         // --- Core UI Primitives ---
         window.teUI = {
